--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta property="og:title" content="Webチャット" />
+  <meta property="og:type" content="chat" />
+  <title>Webチャット</title>
   <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
